<resources>
    <string name="app_name">QuizApp</string>

    <string name="start_quiz_text">START QUIZ</string>
    <string name="final_result">6</string>
    <string name="your_score_label">YOUR SCORE</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="submit_text">SUBMIT</string>

    <string name="Q1">Q1. In the computer world, Trojan refers to</string>
    <string name="Q1AnsOpt1">Virus</string>
    <string name="Q1AnsOpt2">Spyware</string>
    <string name="Q1AnsOpt3">Malware</string>
    <string name="Q1AnsOpt4">Worm</string>

    <string name="Q2">Q2. Which one of followings are programming language?</string>
    <string name="Q2AnsOpt1">HPML</string>
    <string name="Q2AnsOpt2">HTTP</string>
    <string name="Q2AnsOpt3">HTML</string>
    <string name="Q2AnsOpt4">JavaScript</string>

    <string name="Q3">Q3. What was the name of first computer virus?</string>
    <string name="Q3AnsHint">Type your answer here</string>

    <string name="Q4">Q4. Computer Hard Disk was first introduced in 1956 by..</string>
    <string name="Q4AnsOpt1">Dell</string>
    <string name="Q4AnsOpt2">IBM</string>
    <string name="Q4AnsOpt3">Microsoft</string>
    <string name="Q4AnsOpt4">Apple</string>

    <string name="Q5">Q5. Which of the followings are not Programming language?</string>
    <string name="Q5AnsOpt1">BASIC</string>
    <string name="Q5AnsOpt2">LOTUS</string>
    <string name="Q5AnsOpt3">TALLY</string>
    <string name="Q5AnsOpt4">COBOL</string>
</resources>